<resources>
    <string name="app_name">Bd Sim Toolkit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mainmenu">Main Menu</string>
    <string name="gp">Grameenphone</string>
    <string name="bl">Banglalink</string>
    <string name="rb">Robi</string>
    <string name="at">Airtel</string>
    <string name="tt">Teletalk</string>
    <string name="st">Skitto</string>
    <string name="more">More</string>
    <string name="tutorial">Tutorial</string>
    <string name="update">Update</string>
    <string name="rate">Rate Me</string>
    <string name="about">About</string>
    <string name="title_activity_grameenphone">Grameenphone</string>
    <string name="title_activity_banglalink">Banglalink</string>
    <string name="title_activity_robi">Robi</string>
    <string name="title_activity_airtel">Airtel</string>
    <string name="title_activity_teletalk">Teletalk</string>
    <string name="title_activity_skitto">Skitto</string>
    <string name="main_title">Manage Your Sim</string>
    <string name="latest_offers">Latest Offers</string>
    <string name="flexiplan">Flexiplan</string>
    <string name="internet">Internet Packs</string>
    <string name="ppackage">Prepaid Package</string>
    <string name="fnf">FNF Menu</string>
    <string name="ussd">USSD Codes</string>
    <string name="gpRecylerText">1GB 29 Tk Only</string>
    <string name="time">5 days ago</string>
    <string name="title_activity_gp_internet_pack">GpInternetPack</string>
    <string name="addfnf">Add FnF</string>
    <string name="checkfnf">Check FnF</string>
    <string name="changeFnf">Change FnF</string>
    <string name="deleteFnf">Delete FnF</string>
    <string name="speciapFnf">Add Special FnF</string>
    <string name="changespeciapFnf">Change Special FnF</string>
    <string name="checkspeciapFnf">Check Special FnF</string>
    <string name="deletespeciapFnf">Delete Special FnF</string>
</resources>
