<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    tools:context=".BlFnfMenu">

        <Button
            android:id="@+id/addFnf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/bl"
            android:text="@string/addfnf"
            android:inputType="textCapWords"/>
        <Button
            android:id="@+id/checkFnf"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/bl"
            android:text="@string/checkfnf"
            android:layout_below="@+id/addFnf"
            android:inputType="textCapWords"/>
        <Button
            android:id="@+id/changeFnf"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/bl"
            android:text="@string/changeFnf"
            android:layout_below="@+id/checkFnf"
            android:inputType="textCapWords"/>
        <Button
            android:id="@+id/deleteFnf"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/bl"
            android:text="@string/deleteFnf"
            android:layout_below="@+id/changeFnf"
            android:inputType="textCapWords"/>
        <Button
            android:id="@+id/addSpecialFnf"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/bl"
            android:text="@string/speciapFnf"
            android:layout_below="@+id/deleteFnf"
            android:inputType="textCapWords"/>
        <Button
            android:id="@+id/changeSpecialFnf"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/bl"
            android:text="@string/changespeciapFnf"
            android:layout_below="@+id/addSpecialFnf"
            android:inputType="textCapWords"/>
        <Button
            android:id="@+id/checkSpecialFnf"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/bl"
            android:text="@string/checkspeciapFnf"
            android:layout_below="@+id/changeSpecialFnf"
            android:inputType="textCapWords"/>
        <Button
            android:id="@+id/deleteSpecialFnf"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/bl"
            android:text="@string/deletespeciapFnf"
            android:layout_below="@+id/checkSpecialFnf"
            android:inputType="textCapWords"/>


</RelativeLayout>