<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Robi"
    tools:showIn="@layout/app_bar_robi">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:src="@drawable/rsb"/>
    <Button
        android:id="@+id/letestOffer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/latest_offers"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:background="@color/white"/>
    <Button
        android:id="@+id/internet"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/internet"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:background="@color/white"/>
    <Button
        android:id="@+id/ppackage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/ppackage"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:background="@color/white"/>
    <Button
        android:id="@+id/fnf"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/fnf"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:background="@color/white"/>
    <Button
        android:id="@+id/ussd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/ussd"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:background="@color/white"/>

</LinearLayout>