<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:clipToPadding="false"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:id="@+id/gp"
            android:layout_width="120dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:layout_marginEnd="2dp"
            android:layout_height="148dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/gp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gp"
                    android:background="@color/gp"
                    android:textColor="@color/white"
                    android:paddingTop="5dp"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:paddingBottom="5dp"
                    android:gravity="center"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/bl"
            android:layout_width="120dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginEnd="2dp"
            android:focusable="true"
            android:layout_height="148dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/banglalink_logo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bl"
                    android:background="@color/bl"
                    android:textColor="@color/white"
                    android:paddingTop="5dp"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:paddingBottom="5dp"
                    android:gravity="center"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/rb"
            android:layout_width="120dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginEnd="2dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="148dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/robi"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb"
                    android:textColor="@color/white"
                    android:paddingTop="5dp"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:paddingBottom="5dp"
                    android:background="@color/rb"
                    android:gravity="center"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:clipToPadding="false"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:id="@+id/at"
            android:layout_width="120dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:layout_marginEnd="2dp"
            android:layout_height="148dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/airtel"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/at"
                    android:background="@color/at"
                    android:textColor="@color/white"
                    android:paddingTop="5dp"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:paddingBottom="5dp"
                    android:gravity="center"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/tt"
            android:layout_width="120dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginEnd="2dp"
            android:focusable="true"
            android:layout_height="148dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/teletalk"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tt"
                    android:background="@color/tt"
                    android:textColor="@color/white"
                    android:paddingTop="5dp"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:paddingBottom="5dp"
                    android:gravity="center"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/st"
            android:layout_width="120dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginEnd="2dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="148dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/skitto"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/st"
                    android:textColor="@color/white"
                    android:paddingTop="5dp"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:paddingBottom="5dp"
                    android:background="@color/st"
                    android:gravity="center"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</LinearLayout>